--- a/82lottery.html
+++ b/82lottery.html
@@ -113,7 +113,7 @@
         <div class="cooldown" id="cooldown"></div>
         <p class="notice">इसी ऐप से नया अकाउंट बनाएं और डिपॉजिट करें तभी ही हैक कनेक्ट होगी।</p>
         <br>
-        <button class="btn" onclick="window.open('https://telegram.me/apkmodderking')">Join Telegram</button>
+        <button class="btn" onclick="window.open('https://telegram.me/apkmodderkings')">Join Telegram</button>
     </div>
     <script>
         let icon = document.getElementById("icon");
